src/objects/Revenue_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Data</relationshipLabel>
        <relationshipName>Revenue_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BWW3_Crizal_City__c</fullName>
        <label>BWW3 Crizal City</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BWW3_Glass_Revenue__c</fullName>
        <label>BWW3 Glass Revenue (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog_Price_Bonus__c</fullName>
        <label>Catalog Price (Bonus)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog_Price_Free__c</fullName>
        <label>Catalog Price (Free)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog_Price_Total__c</fullName>
        <label>Catalog Price (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID from ERP</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glass_Revenue_Bonus__c</fullName>
        <label>Glass Revenue (Bonus)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Glass_Revenue_Free__c</fullName>
        <label>Glass Revenue (Free)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossCatalog_restated__c</fullName>
        <label>GrossCatalog restated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Net_Crizal_City__c</fullName>
        <label>Revenue (Net) Crizal City</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Net__c</fullName>
        <label>Revenue (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Bonus__c</fullName>
        <label>Upfront Bonus</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vx_Specialist__c</fullName>
        <label>Vx Specialist Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Revenue Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Revenue Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>